# EvexBot

./: .env.example  .gitignore  README.md  bot.py  config.yml  requirements.txt
.github/agents/: SCloudAgent.agent.md
cogs/: avatar.py  growth.py  imagegen.py  linkapi.py  members-history.py  messagelink.py  miq.py  mvp.py  sandbox.py  sindan.py  snapshot.py  welcome.py  zikosyokai.py
evexbot-rust/: .env.example  Cargo.toml
evexbot-rust/scripts/: README.md  prophet_predict.py  test_input.json
evexbot-rust/src/: avatar.rs  config.rs  db.rs  growth.rs  imagegen.rs  main.rs  members_history.rs  messagelink.rs  sandbox.rs  welcome.rs  zikosyokai.rs
lib/: miq.py
