[package]
name = "evexbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http", "builder", "cache", "utils"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
plotters = "0.3"
plotters-bitmap = "0.3"
image = "0.24"
smartcore = "0.2"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
once_cell = "1.18"
regex = "1"
urlencoding = "2"
dotenvy = "0.15"

[profile.release]
opt-level = 3
